--- a/src/main/resources/assets/create_cogs_invaders/lang/en_us.json
+++ b/src/main/resources/assets/create_cogs_invaders/lang/en_us.json
@@ -26,7 +26,7 @@
   "subtitles.station_use": "Station Use",
   "entity.create_cogs_invaders.sentry_warrior": "Sentry (warrior)",
   "tooltip.create_cogs_invaders.space.shift_down": "",
-  "enchantment.create_cogs_invaders.limit_breack": "Limit Break",
+  "enchantment.create_cogs_invaders.limit_breack": "Limit Breack",
   "item.create_cogs_invaders.sentry_warrior_spawn_egg": "Sentry Warrior Spawn Egg",
   "item.create_cogs_invaders.elite_warrior_spawn_egg": "Elite Warrior Spawn Egg",
   "effect.create_cogs_invaders.electroshock": "Electroshock",
