--- a/src/main/resources/assets/create_cogs_invaders/lang/en_us.json
+++ b/src/main/resources/assets/create_cogs_invaders/lang/en_us.json
@@ -19,6 +19,7 @@
   "block.create_cogs_invaders.miner_head": "Miner Head",
   "subtitles.fwoomp": "Fwoomp",
   "item.create_cogs_invaders.brass_glass_bottle": "Brass Glass Bottle",
+  "tooltip.create_cogs_invaders.tesla_gun.shift_down_0": " §e25 HP§6)",
   "item.create_cogs_invaders.dial_repair": "Dial Repair",
   "tooltip.create_cogs_invaders.reload.shift_down": "§7Reload",
   "item.create_cogs_invaders.incomplete_dynamic_mechanism": "Incomplete Dynamic Mechanism",
@@ -58,7 +59,7 @@
   "tooltip.create_cogs_invaders.tesla_cannon.energy": "Energy: %1$s/%2$s",
   "entity.create_cogs_invaders.elite_pistol": "Elite (pistol)",
   "item.create_cogs_invaders.manufacturer_spawn_egg": "Manufacturer Spawn Egg",
-  "tooltip.create_cogs_invaders.tesla_cannon.shift_down_3": " §e25 health hearts§6)",
+  "tooltip.create_cogs_invaders.tesla_cannon.shift_down_3": " §e100 HP§6)",
   "tooltip.create_cogs_invaders.repair_kit.shift_down_1": "§6while holding the§e Repair Kit§6 in",
   "tooltip.create_cogs_invaders.tesla_cannon.shift_down_2": "§6(§eonly affects enemies with less than",
   "tooltip.create_cogs_invaders.repair_kit.shift_down_2": "§6one hand and the tool to be repaired",
