--- a/src/main/resources/assets/create_cogs_invaders/lang/es_cl.json
+++ b/src/main/resources/assets/create_cogs_invaders/lang/es_cl.json
@@ -19,6 +19,7 @@
   "block.create_cogs_invaders.miner_head": "Cabeza de Minero",
   "subtitles.fwoomp": "Fwoomp",
   "item.create_cogs_invaders.brass_glass_bottle": "Botella de vidrio de latón",
+  "tooltip.create_cogs_invaders.tesla_gun.shift_down_0": "§e 25 HP§6)",
   "item.create_cogs_invaders.dial_repair": "Dial (reparación)",
   "tooltip.create_cogs_invaders.reload.shift_down": "§7Recarga",
   "item.create_cogs_invaders.incomplete_dynamic_mechanism": "Mecanismo dinámico incompleto",
@@ -58,7 +59,7 @@
   "tooltip.create_cogs_invaders.tesla_cannon.energy": "Energía: %1$s/%2$s",
   "entity.create_cogs_invaders.elite_pistol": "Elite (pistola)",
   "item.create_cogs_invaders.manufacturer_spawn_egg": "Generar Fabricante",
-  "tooltip.create_cogs_invaders.tesla_cannon.shift_down_3": "§e 50 corazones de vida§6)",
+  "tooltip.create_cogs_invaders.tesla_cannon.shift_down_3": "§e 100 HP§6)",
   "tooltip.create_cogs_invaders.repair_kit.shift_down_1": "§6haz§e clic derecho mientras se sostiene ",
   "tooltip.create_cogs_invaders.tesla_cannon.shift_down_2": "§6(§esolo afecta a enemigos con menos de",
   "tooltip.create_cogs_invaders.repair_kit.shift_down_2": "§6el§e Kit de reparación§6 en una mano y",
